<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainRelativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/frame_container"
        android:layout_width="match_parent"
        android:layout_height="225dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp" />

    <Button
        android:id="@+id/createBudgetButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignLeft="@+id/frame_container"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/ic_receipt_black_24dp"
        android:paddingLeft="10dp"
        android:paddingTop="10dp" />

    <EditText
        android:id="@+id/budgetTextBox"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@+id/createBudgetButton"
        android:hint="@string/budget_total"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/totalBudgetTextView"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="8dp"
        android:layout_toStartOf="@+id/goShoppingButton"
        android:layout_toEndOf="@+id/budgetTextBox"
        android:gravity="center"
        android:textSize="28sp"/>

    <Button
        android:id="@+id/goShoppingButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignEnd="@+id/frame_container"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/ic_credit_card_black_24dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp" />

    <Button
        android:id="@+id/addItemButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_below="@+id/goShoppingButton"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/ic_add_circle_outline_black_24dp" />

    <EditText
        android:id="@+id/itemPriceTextBox"
        android:layout_width="75dp"
        android:layout_height="50dp"
        android:layout_below="@+id/totalBudgetTextView"
        android:layout_marginStart="15dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="12dp"
        android:layout_toStartOf="@+id/addItemButton"
        android:hint="@string/item_price"
        android:autofillHints="@string/item_price"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/productTextBox"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_below="@+id/budgetTextBox"
        android:layout_alignParentStart="true"
        android:layout_marginStart="38dp"
        android:layout_marginTop="15dp"
        android:hint="@string/product_name"
        android:inputType="text" />

    <TextView
        android:id="@+id/quantityLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/quantityComboBox"
        android:layout_alignParentStart="true"
        android:layout_marginStart="45dp"
        android:layout_marginBottom="10dp"
        android:text="@string/quantity_label" />

    <Spinner
        android:id="@+id/quantityComboBox"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignBottom="@+id/frame_container"
        android:layout_alignParentStart="true"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="10dp"
        android:entries="@array/quantity_items"/>

    <TextView
        android:id="@+id/priorityLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/priorityComboBox"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="10dp"
        android:layout_toStartOf="@+id/itemPriceTextBox"
        android:text="@string/priority_label" />

    <Spinner
        android:id="@+id/priorityComboBox"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignBottom="@+id/frame_container"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="11dp"
        android:layout_toStartOf="@+id/itemPriceTextBox"
        android:entries="@array/priority_items" />

    <FrameLayout
        android:id="@+id/listFrameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/frame_container"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp" >
    
    <com.baoyz.swipemenulistview.SwipeMenuListView
        android:id="@+id/mainListView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
    </FrameLayout>

</RelativeLayout>